# LoRaMesher

./: .clang-format  .editorconfig  .gitignore  CLAUDE.md  CMakeLists.txt  CONTRIBUTOR_GUIDE.md  IMPLEMENTATION_STATUS.md  LICENSE  PROTOCOL_SPEC.md  README.md  UPDATES.md  idf_component.yml  library.json  library.properties  log_analyzer.html  loramesher.cpp  loramesher.h  platformio.ini  sample_log.txt
cmake/: CMakeLists.txt
src/: BuildOptions.cpp  BuildOptions.h  CMakeLists.txt  EspHal.cpp  EspHal.h  LoraMesher.cpp  LoraMesher.h  build_options.hpp  loramesher.cpp  loramesher.h  loramesher.hpp  main_example.cpp
src/config/: system_config.hpp  task_config.hpp
src/entities/packets/: AppPacket.h  ControlPacket.h  DataPacket.h  HelloPacket.h  Packet.h  PacketHeader.h  QueuePacket.h  RTRequestPacket.h  RouteDataPacket.h  RoutePacket.h
src/entities/routingTable/: HelloPacketNode.h  NetworkNode.h  RouteNode.h
src/entities/state/: LM_State.h
src/hal/: loramesher_hal.hpp
src/hal/arduino/: arduino_hal.cpp  arduino_hal.hpp
src/hal/native/: native_hal.cpp  native_hal.hpp
src/hardware/: SPIMock.cpp  SPIMock.hpp  hal.hpp  hal_factory.hpp  hardware_manager.cpp  hardware_manager.hpp
src/hardware/arduino/: arduino_hal.cpp  arduino_hal.hpp  radiolib_radio.cpp  radiolib_radio.hpp
src/hardware/arduino/radioLibModules/: radio_lib_code_errors.hpp  sx1276.cpp  sx1276.hpp
src/hardware/arduino/radiolib_modules/: radio_lib_code_errors.hpp  sx1276.cpp  sx1276.hpp
src/hardware/native/: native_hal.cpp  native_hal.hpp
src/hardware/radiolib/: radiolib_radio.cpp  radiolib_radio.hpp
src/hardware/radiolib/radiolib_modules/: radio_lib_code_errors.hpp  sx1276.cpp  sx1276.hpp
src/helpers/: LinkedQueue.hpp
src/mocks/: mock_radio.cpp  mock_radio.hpp  mock_radio_test_helpers.hpp
src/modules/: LM_Module.h  LM_Modules.h  LM_RFM95.cpp  LM_RFM95.h  LM_SX1262.cpp  LM_SX1262.h  LM_SX1268.cpp  LM_SX1268.h  LM_SX1276.cpp  LM_SX1276.h  LM_SX1278.cpp  LM_SX1278.h  LM_SX1280.cpp  LM_SX1280.h
src/os/: os_port.hpp  rtos.cpp  rtos.hpp  rtos_freertos.hpp  rtos_mock.hpp
src/packets/: ControlPacket.h  DataPacket.h  Packet.h  PacketEx.h  PacketHeader.h  PacketService.cpp  PacketService.h  RoutePacket.h
src/protocols/: lora_mesh_protocol.cpp  lora_mesh_protocol.hpp  ping_pong_protocol.cpp  ping_pong_protocol.hpp  protocol_manager.cpp  protocol_manager.hpp
src/protocols/lora_mesh/: join_service.hpp  message_queue_service.hpp  network_discovery_service.hpp  routing_service.hpp  slot_management_service.hpp
src/protocols/lora_mesh/interfaces/: i_join_service.hpp  i_message_queue_service.hpp  i_network_discovery_service.hpp  i_network_node_service.hpp  i_network_service.hpp  i_routing_service.hpp  i_routing_table.hpp  i_slot_management_service.hpp  i_superframe_service.hpp
src/protocols/lora_mesh/routing/: distance_vector_routing_table.cpp  distance_vector_routing_table.hpp  routing_table_factory.cpp
src/protocols/lora_mesh/services/: message_queue_service.cpp  message_queue_service.hpp  network_node_service.cpp  network_node_service.hpp  network_service.cpp  network_service.hpp  superframe_service.cpp  superframe_service.hpp  time_provider.hpp
src/radio/: radio.h  radio.hpp  radio_error_codes.hpp  radio_event.hpp
src/routingTable/: NetworkNode.h  RouteNode.h  RoutingTableService.cpp  RoutingTableService.h
src/services/: MACService.cpp  MACService.h  PacketFactory.cpp  PacketFactory.h  PacketQueueService.cpp  PacketQueueService.h  PacketService.cpp  PacketService.h  ProcessPacketService.h  RoleService.cpp  RoleService.h  RouteUpdateService.cpp  RouteUpdateService.h  RoutingTableService.cpp  RoutingTableService.h  SimulatorService.cpp  SimulatorService.h  WiFiService.h  WifiService.cpp
src/types/application/: application_types.hpp
src/types/configurations/: loramesher_configuration.cpp  loramesher_configuration.hpp  pin_configuration.cpp  pin_configuration.hpp  protocol_configuration.cpp  protocol_configuration.hpp  radio_configuration.cpp  radio_configuration.hpp
src/types/error_codes/: loramesher_error_codes.hpp  result.hpp
src/types/hardware/: i_hardware_manager.hpp
src/types/messages/: base_header.cpp  base_header.hpp  base_message.cpp  base_message.hpp  message.cpp  message.hpp  message_factory.hpp  message_type.hpp  routing_message.hpp
src/types/messages/loramesher/: join_request_header.cpp  join_request_header.hpp  join_request_message.cpp  join_request_message.hpp  join_response_header.cpp  (+16 more)
src/types/protocols/: protocol.hpp
src/types/radio/: radio.hpp  radio_error_codes.hpp  radio_event.hpp  radio_state.hpp
src/utilities/: BitList.hpp  LinkedQueue.hpp  byte_operations.h
src/utils/: address_generator.cpp  address_generator.hpp  byte_operations.h  file_log_handler.hpp  logger.cpp  logger.hpp  task_monitor.hpp
test/: CMakeLists.txt
test/mocks/: mock_radio.hpp  mock_rtos.hpp
test/protocols/test_lora_mesher/: lora_mesh_discovery_test.cpp
test/services/: Test_PacketService.cpp
test/test_configurations/: loramesher_configuration_test.cpp
test/test_hardware/: radiolib_radio_mock_test.cpp  radiolib_radio_test.cpp  test_hardware.cpp
test/test_messages/: message_test.cpp
test/test_native/: test_message.cpp
test/test_os/: mock_rtos.hpp  rtos_mock_test.cpp  rtos_mock_with_timer_test.cpp  rtos_test.cpp  test_rtos.cpp
test/types/test_configurations/: loramesher_configuration_test.cpp  pin_configuration_test.cpp  protocol_configuration_test.cpp  radio_configuration_test.cpp  test_configuration.cpp
test/types/test_messages/: join_request_message_test.cpp  join_response_message_test.cpp  message_test.cpp  ping_pong_message_test.cpp  routing_message_test.cpp  routing_table_message_test.cpp  slot_allocation_message_test.cpp  slot_request_message_test.cpp  sync_beacon_message_test.cpp  test_message.cpp
test/types/test_radio/: mock_radio.hpp  radio_error_test.cpp  radio_event_test.cpp  radio_test.cpp  test_radio_module.cpp
test/utils/: mock_radio.hpp  mock_rtos.hpp  network_testing_impl.hpp
test/utils/test_utils/: network_testing_impl_test.cpp  test_utils.cpp
(+73 files in other folders)
